[project]
name = "hackathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=1.4.2",
    "duckduckgo-search>=8.0.1",
    "fastapi[standard]>=0.115.12",
    "fastembed>=0.6.1",
    "groq>=0.23.1",
    "lancedb>=0.22.0",
    "openai>=1.76.0",
    "pypdf>=5.4.0",
    "python-dotenv>=1.1.0",
    "sqlalchemy>=2.0.40",
]
